modified in branch

--- a/testfile.html
+++ b/testfile.html
@@ -58,7 +58,7 @@ margin-right: 1rem;
 </style>
 
 <div>
-
+<h2>ANOTHER CHANGE IN THE BRANCH TO THE NOTED IN FILE</h2>
 <!-- Materialize CSS Navbar -->
 <div class="navbar-fixed">
 <nav class="grey darken-3">
